Added new CREOLE parameters (to be documented in the user guide soon).
Fixed some minor bugs in datastore handling and interruption.

Made the crawl mode an enum to get a pull-down menu in the GUI (should
be compatible with old gapp files).

Transferred all the parameter stuff from creole.xml to annotations.